force-app/main/default/objects/SiebelRds__x/SiebelRds__x.object-meta.xml
<CustomObject>
    <description>SiebelRds</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelRds</externalName>
    <label>RDS Siebel</label>
    <pluralLabel>RDS Siebel</pluralLabel>
</CustomObject>