force-app/main/default/objects/SiebelRds__x/fields/ASSET_NUM__c.field-meta.xml
<CustomField>
    <fullName>ASSET_NUM__c</fullName>
    <description>ASSET_NUM</description>
    <externalDeveloperName>ASSET_NUM</externalDeveloperName>
    <label>Codice Contratto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>