force-app/main/default/objects/SiebelRds__x/fields/ATTRIB_04__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_04__c</fullName>
    <description>ATTRIB_04</description>
    <externalDeveloperName>ATTRIB_04</externalDeveloperName>
    <label>E-mail 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>