force-app/main/default/objects/SiebelRds__x/fields/ATTRIB_09__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_09__c</fullName>
    <description>ATTRIB_09</description>
    <externalDeveloperName>ATTRIB_09</externalDeveloperName>
    <label>CIN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>