force-app/main/default/objects/SiebelRds__x/fields/ATTRIB_10__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_10__c</fullName>
    <description>ATTRIB_10</description>
    <externalDeveloperName>ATTRIB_10</externalDeveloperName>
    <label>Non accetta l&apos;indagine</label>
    <length>1</length>
    <type>Text</type>
</CustomField>