force-app/main/default/objects/SiebelRds__x/fields/CST_OU_ID__c.field-meta.xml
<CustomField>
    <fullName>CST_OU_ID__c</fullName>
    <description>CST_OU_ID</description>
    <externalDeveloperName>CST_OU_ID</externalDeveloperName>
    <label>CST_OU_ID</label>
    <length>15</length>
    <referenceTo>SiebelCustomer__x</referenceTo>
    <relationshipLabel>Richieste</relationshipLabel>
    <relationshipName>SiebelRds</relationshipName>
    <type>ExternalLookup</type>
</CustomField>