force-app/main/default/objects/SiebelRds__x/fields/DESC_TEXT__c.field-meta.xml
<CustomField>
    <fullName>DESC_TEXT__c</fullName>
    <description>DESC_TEXT</description>
    <externalDeveloperName>DESC_TEXT</externalDeveloperName>
    <label>Note 1</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>