force-app/main/default/objects/SiebelRds__x/fields/LAST_UPD__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPD__c</fullName>
    <description>LAST_UPD</description>
    <externalDeveloperName>LAST_UPD</externalDeveloperName>
    <label>LAST_UPD</label>
    <type>DateTime</type>
</CustomField>