force-app/main/default/objects/SiebelRds__x/fields/MOD_INVIO_DOC__c.field-meta.xml
<CustomField>
    <fullName>MOD_INVIO_DOC__c</fullName>
    <description>MOD_INVIO_DOC</description>
    <externalDeveloperName>MOD_INVIO_DOC</externalDeveloperName>
    <label>Modalità Invio Documentazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>