force-app/main/default/objects/SiebelRds__x/fields/OPTY_ID__c.field-meta.xml
<CustomField>
    <fullName>OPTY_ID__c</fullName>
    <description>OPTY_ID</description>
    <externalDeveloperName>OPTY_ID</externalDeveloperName>
    <label>Opportunity ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>