force-app/main/default/objects/SiebelRds__x/fields/PER_ADDR_ID__c.field-meta.xml
<CustomField>
    <fullName>PER_ADDR_ID__c</fullName>
    <description>PER_ADDR_ID</description>
    <externalDeveloperName>PER_ADDR_ID</externalDeveloperName>
    <label>Indirizzo Cliente</label>
    <length>15</length>
    <type>Text</type>
</CustomField>