force-app/main/default/objects/SiebelRds__x/fields/Rds_ATTRIB_34__c.field-meta.xml
<CustomField>
    <fullName>Rds_ATTRIB_34__c</fullName>
    <description>Rds_ATTRIB_34</description>
    <externalDeveloperName>Rds_ATTRIB_34</externalDeveloperName>
    <label>Tipo fatturazione</label>
    <length>50</length>
    <type>Text</type>
</CustomField>