force-app/main/default/objects/SiebelRds__x/fields/Rds_ATTRIB_35__c.field-meta.xml
<CustomField>
    <fullName>Rds_ATTRIB_35__c</fullName>
    <description>Rds_ATTRIB_35</description>
    <externalDeveloperName>Rds_ATTRIB_35</externalDeveloperName>
    <label>ABI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>