force-app/main/default/objects/SiebelRds__x/fields/Rds_ATTRIB_36__c.field-meta.xml
<CustomField>
    <fullName>Rds_ATTRIB_36__c</fullName>
    <description>Rds_ATTRIB_36</description>
    <externalDeveloperName>Rds_ATTRIB_36</externalDeveloperName>
    <label>Canale di pagamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>