force-app/main/default/objects/SiebelRds__x/fields/Rds_CREATED__c.field-meta.xml
<CustomField>
    <fullName>Rds_CREATED__c</fullName>
    <description>Rds_CREATED</description>
    <externalDeveloperName>Rds_CREATED</externalDeveloperName>
    <label>Data Creazione</label>
    <type>DateTime</type>
</CustomField>