force-app/main/default/objects/SiebelRds__x/fields/Rds_MOD_INVIO_DOC__c.field-meta.xml
<CustomField>
    <fullName>Rds_MOD_INVIO_DOC__c</fullName>
    <description>Rds_MOD_INVIO_DOC</description>
    <externalDeveloperName>Rds_MOD_INVIO_DOC</externalDeveloperName>
    <label>Modalita Invio Documentazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>