force-app/main/default/objects/SiebelRds__x/fields/Rds_X_FLG_DELEGA__c.field-meta.xml
<CustomField>
    <fullName>Rds_X_FLG_DELEGA__c</fullName>
    <description>Rds_X_FLG_DELEGA</description>
    <externalDeveloperName>Rds_X_FLG_DELEGA</externalDeveloperName>
    <label>Delega</label>
    <length>1</length>
    <type>Text</type>
</CustomField>