force-app/main/default/objects/SiebelRds__x/fields/Rds_X_HER_DATA_CONSENSO_PEC__c.field-meta.xml
<CustomField>
    <fullName>Rds_X_HER_DATA_CONSENSO_PEC__c</fullName>
    <description>Rds_X_HER_DATA_CONSENSO_PEC</description>
    <externalDeveloperName>Rds_X_HER_DATA_CONSENSO_PEC</externalDeveloperName>
    <label>Data Consenso Pec</label>
    <type>DateTime</type>
</CustomField>