force-app/main/default/objects/SiebelRds__x/fields/Rds_X_IND_BP_ALTERN_ID__c.field-meta.xml
<CustomField>
    <fullName>Rds_X_IND_BP_ALTERN_ID__c</fullName>
    <description>Rds_X_IND_BP_ALTERN_ID</description>
    <externalDeveloperName>Rds_X_IND_BP_ALTERN_ID</externalDeveloperName>
    <label>ID Indirizzo BP Alternativo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>