force-app/main/default/objects/SiebelRds__x/fields/Rds_X_MAIL_PEC_FE__c.field-meta.xml
<CustomField>
    <fullName>Rds_X_MAIL_PEC_FE__c</fullName>
    <description>Rds_X_MAIL_PEC_FE</description>
    <externalDeveloperName>Rds_X_MAIL_PEC_FE</externalDeveloperName>
    <label>PEC Fattura Elettronica</label>
    <length>50</length>
    <type>Text</type>
</CustomField>