force-app/main/default/objects/SiebelRds__x/fields/SR_SUB_STAT_ID__c.field-meta.xml
<CustomField>
    <fullName>SR_SUB_STAT_ID__c</fullName>
    <description>SR_SUB_STAT_ID</description>
    <externalDeveloperName>SR_SUB_STAT_ID</externalDeveloperName>
    <label>Sub Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>