force-app/main/default/objects/SiebelRds__x/fields/SR_SUBTYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>SR_SUBTYPE_CD__c</fullName>
    <description>SR_SUBTYPE_CD</description>
    <externalDeveloperName>SR_SUBTYPE_CD</externalDeveloperName>
    <label>Canale</label>
    <length>30</length>
    <type>Text</type>
</CustomField>