force-app/main/default/objects/SiebelRds__x/fields/TYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>TYPE_CD__c</fullName>
    <description>TYPE_CD</description>
    <externalDeveloperName>TYPE_CD</externalDeveloperName>
    <label>Tipo CD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>