force-app/main/default/objects/SiebelRds__x/fields/X_ANNULL_TIPO_INT__c.field-meta.xml
<CustomField>
    <fullName>X_ANNULL_TIPO_INT__c</fullName>
    <description>X_ANNULL_TIPO_INT</description>
    <externalDeveloperName>X_ANNULL_TIPO_INT</externalDeveloperName>
    <label>Annulla Tipo INT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>