force-app/main/default/objects/SiebelRds__x/fields/X_ANNULLAMENTO_PRESTAZIONE__c.field-meta.xml
<CustomField>
    <fullName>X_ANNULLAMENTO_PRESTAZIONE__c</fullName>
    <description>X_ANNULLAMENTO_PRESTAZIONE</description>
    <externalDeveloperName>X_ANNULLAMENTO_PRESTAZIONE</externalDeveloperName>
    <label>Annullamento prestazione</label>
    <length>2</length>
    <type>Text</type>
</CustomField>