force-app/main/default/objects/SiebelRds__x/fields/X_ASGN_DT_SIM__c.field-meta.xml
<CustomField>
    <fullName>X_ASGN_DT_SIM__c</fullName>
    <description>X_ASGN_DT_SIM</description>
    <externalDeveloperName>X_ASGN_DT_SIM</externalDeveloperName>
    <label>Data apertura richiesta SIM</label>
    <type>DateTime</type>
</CustomField>