force-app/main/default/objects/SiebelRds__x/fields/X_ASSET_ID_METER__c.field-meta.xml
<CustomField>
    <fullName>X_ASSET_ID_METER__c</fullName>
    <description>X_ASSET_ID_METER</description>
    <externalDeveloperName>X_ASSET_ID_METER</externalDeveloperName>
    <label>Id contatore</label>
    <length>15</length>
    <type>Text</type>
</CustomField>