force-app/main/default/objects/SiebelRds__x/fields/X_ATTRIB_102__c.field-meta.xml
<CustomField>
    <fullName>X_ATTRIB_102__c</fullName>
    <description>X_ATTRIB_102</description>
    <externalDeveloperName>X_ATTRIB_102</externalDeveloperName>
    <label>Consumo annuo dichiarato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>