force-app/main/default/objects/SiebelRds__x/fields/X_ATTRIB_105__c.field-meta.xml
<CustomField>
    <fullName>X_ATTRIB_105__c</fullName>
    <description>X_ATTRIB_105</description>
    <externalDeveloperName>X_ATTRIB_105</externalDeveloperName>
    <label>Tutti gli impianti</label>
    <length>100</length>
    <type>Text</type>
</CustomField>