force-app/main/default/objects/SiebelRds__x/fields/X_ATTRIB_107__c.field-meta.xml
<CustomField>
    <fullName>X_ATTRIB_107__c</fullName>
    <description>X_ATTRIB_107</description>
    <externalDeveloperName>X_ATTRIB_107</externalDeveloperName>
    <label>Data ricezione Archidoc</label>
    <type>DateTime</type>
</CustomField>