force-app/main/default/objects/SiebelRds__x/fields/X_AUTOLETTURA_FATTURAZIONE__c.field-meta.xml
<CustomField>
    <fullName>X_AUTOLETTURA_FATTURAZIONE__c</fullName>
    <description>X_AUTOLETTURA_FATTURAZIONE</description>
    <externalDeveloperName>X_AUTOLETTURA_FATTURAZIONE</externalDeveloperName>
    <label>Autolettura in Fatturazione</label>
    <length>1</length>
    <type>Text</type>
</CustomField>