force-app/main/default/objects/SiebelRds__x/fields/X_BP_NUOVO_ID__c.field-meta.xml
<CustomField>
    <fullName>X_BP_NUOVO_ID__c</fullName>
    <description>X_BP_NUOVO_ID</description>
    <externalDeveloperName>X_BP_NUOVO_ID</externalDeveloperName>
    <label>BP Nuovo ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>