force-app/main/default/objects/SiebelRds__x/fields/X_CANALE_VENDITA__c.field-meta.xml
<CustomField>
    <fullName>X_CANALE_VENDITA__c</fullName>
    <description>X_CANALE_VENDITA</description>
    <externalDeveloperName>X_CANALE_VENDITA</externalDeveloperName>
    <label>Canale di vendita</label>
    <length>50</length>
    <type>Text</type>
</CustomField>