force-app/main/default/objects/SiebelRds__x/fields/X_CANC_BP_ALTERN__c.field-meta.xml
<CustomField>
    <fullName>X_CANC_BP_ALTERN__c</fullName>
    <description>X_CANC_BP_ALTERN</description>
    <externalDeveloperName>X_CANC_BP_ALTERN</externalDeveloperName>
    <label>Cancella amministratore</label>
    <length>1</length>
    <type>Text</type>
</CustomField>