force-app/main/default/objects/SiebelRds__x/fields/X_CATALOGO__c.field-meta.xml
<CustomField>
    <fullName>X_CATALOGO__c</fullName>
    <description>X_CATALOGO</description>
    <externalDeveloperName>X_CATALOGO</externalDeveloperName>
    <label>Catalogo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>