force-app/main/default/objects/SiebelRds__x/fields/X_CAUSALE_ANNULL__c.field-meta.xml
<CustomField>
    <fullName>X_CAUSALE_ANNULL__c</fullName>
    <description>X_CAUSALE_ANNULL</description>
    <externalDeveloperName>X_CAUSALE_ANNULL</externalDeveloperName>
    <label>Causale Annullamento</label>
    <length>160</length>
    <type>Text</type>
</CustomField>