force-app/main/default/objects/SiebelRds__x/fields/X_CF_PREC_INTEST__c.field-meta.xml
<CustomField>
    <fullName>X_CF_PREC_INTEST__c</fullName>
    <description>X_CF_PREC_INTEST</description>
    <externalDeveloperName>X_CF_PREC_INTEST</externalDeveloperName>
    <label>Codice Fiscale Precedente Intestatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>