force-app/main/default/objects/SiebelRds__x/fields/X_CHE_2__c.field-meta.xml
<CustomField>
    <fullName>X_CHE_2__c</fullName>
    <description>X_CHE_2</description>
    <externalDeveloperName>X_CHE_2</externalDeveloperName>
    <label>X_CHE_2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>