force-app/main/default/objects/SiebelRds__x/fields/X_CHE_4__c.field-meta.xml
<CustomField>
    <fullName>X_CHE_4__c</fullName>
    <description>X_CHE_4</description>
    <externalDeveloperName>X_CHE_4</externalDeveloperName>
    <label>X_CHE_4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>