force-app/main/default/objects/SiebelRds__x/fields/X_CHE_7__c.field-meta.xml
<CustomField>
    <fullName>X_CHE_7__c</fullName>
    <description>X_CHE_7</description>
    <externalDeveloperName>X_CHE_7</externalDeveloperName>
    <label>X_CHE_7</label>
    <length>30</length>
    <type>Text</type>
</CustomField>