force-app/main/default/objects/SiebelRds__x/fields/X_CHIAVE_REITEK__c.field-meta.xml
<CustomField>
    <fullName>X_CHIAVE_REITEK__c</fullName>
    <description>X_CHIAVE_REITEK</description>
    <externalDeveloperName>X_CHIAVE_REITEK</externalDeveloperName>
    <label>Chiave REITEK</label>
    <length>50</length>
    <type>Text</type>
</CustomField>