force-app/main/default/objects/SiebelRds__x/fields/X_CIFRE_LETT_10__c.field-meta.xml
<CustomField>
    <fullName>X_CIFRE_LETT_10__c</fullName>
    <description>X_CIFRE_LETT_10</description>
    <externalDeveloperName>X_CIFRE_LETT_10</externalDeveloperName>
    <label>Cifre lettura 10</label>
    <length>2</length>
    <type>Text</type>
</CustomField>