force-app/main/default/objects/SiebelRds__x/fields/X_CIFRE_LETT_2__c.field-meta.xml
<CustomField>
    <fullName>X_CIFRE_LETT_2__c</fullName>
    <description>X_CIFRE_LETT_2</description>
    <externalDeveloperName>X_CIFRE_LETT_2</externalDeveloperName>
    <label>Cifre lettura 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>