force-app/main/default/objects/SiebelRds__x/fields/X_CIFRE_LETT_3__c.field-meta.xml
<CustomField>
    <fullName>X_CIFRE_LETT_3__c</fullName>
    <description>X_CIFRE_LETT_3</description>
    <externalDeveloperName>X_CIFRE_LETT_3</externalDeveloperName>
    <label>Cifre lettura 3</label>
    <length>2</length>
    <type>Text</type>
</CustomField>