force-app/main/default/objects/SiebelRds__x/fields/X_CLICK_STATUS__c.field-meta.xml
<CustomField>
    <fullName>X_CLICK_STATUS__c</fullName>
    <description>X_CLICK_STATUS</description>
    <externalDeveloperName>X_CLICK_STATUS</externalDeveloperName>
    <label>Statos Click</label>
    <length>10</length>
    <type>Text</type>
</CustomField>