force-app/main/default/objects/SiebelRds__x/fields/X_COD_PAPERLESS__c.field-meta.xml
<CustomField>
    <fullName>X_COD_PAPERLESS__c</fullName>
    <description>X_COD_PAPERLESS</description>
    <externalDeveloperName>X_COD_PAPERLESS</externalDeveloperName>
    <label>Codice Paperless</label>
    <length>160</length>
    <type>Text</type>
</CustomField>