force-app/main/default/objects/SiebelRds__x/fields/X_COD_UFFICIO__c.field-meta.xml
<CustomField>
    <fullName>X_COD_UFFICIO__c</fullName>
    <description>X_COD_UFFICIO</description>
    <externalDeveloperName>X_COD_UFFICIO</externalDeveloperName>
    <label>X_COD_UFFICIO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>