force-app/main/default/objects/SiebelRds__x/fields/X_COD_UFFICIO_AT__c.field-meta.xml
<CustomField>
    <fullName>X_COD_UFFICIO_AT__c</fullName>
    <description>X_COD_UFFICIO_AT</description>
    <externalDeveloperName>X_COD_UFFICIO_AT</externalDeveloperName>
    <label>Attuale Codice Ufficio/Destinatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>