force-app/main/default/objects/SiebelRds__x/fields/X_CODICE_DISTRIBUTORE__c.field-meta.xml
<CustomField>
    <fullName>X_CODICE_DISTRIBUTORE__c</fullName>
    <description>X_CODICE_DISTRIBUTORE</description>
    <externalDeveloperName>X_CODICE_DISTRIBUTORE</externalDeveloperName>
    <label>X_CODICE_DISTRIBUTORE</label>
    <length>60</length>
    <type>Text</type>
</CustomField>