force-app/main/default/objects/SiebelRds__x/fields/X_CODICE_RECLAMO__c.field-meta.xml
<CustomField>
    <fullName>X_CODICE_RECLAMO__c</fullName>
    <description>X_CODICE_RECLAMO</description>
    <externalDeveloperName>X_CODICE_RECLAMO</externalDeveloperName>
    <label>X_CODICE_RECLAMO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>