force-app/main/default/objects/SiebelRds__x/fields/X_COGNOME_BP_ALTERN_OLD__c.field-meta.xml
<CustomField>
    <fullName>X_COGNOME_BP_ALTERN_OLD__c</fullName>
    <description>X_COGNOME_BP_ALTERN_OLD</description>
    <externalDeveloperName>X_COGNOME_BP_ALTERN_OLD</externalDeveloperName>
    <label>Vecchio Cognome BP Relazione attuale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>