force-app/main/default/objects/SiebelRds__x/fields/X_COMP_DAYS__c.field-meta.xml
<CustomField>
    <fullName>X_COMP_DAYS__c</fullName>
    <description>X_COMP_DAYS</description>
    <externalDeveloperName>X_COMP_DAYS</externalDeveloperName>
    <label>Giorni Completi</label>
    <length>15</length>
    <type>Text</type>
</CustomField>