force-app/main/default/objects/SiebelRds__x/fields/X_CONN_ID__c.field-meta.xml
<CustomField>
    <fullName>X_CONN_ID__c</fullName>
    <description>X_CONN_ID</description>
    <externalDeveloperName>X_CONN_ID</externalDeveloperName>
    <label>ID connessione</label>
    <length>16</length>
    <type>Text</type>
</CustomField>