force-app/main/default/objects/SiebelRds__x/fields/X_CONTO_CONTR__c.field-meta.xml
<CustomField>
    <fullName>X_CONTO_CONTR__c</fullName>
    <description>X_CONTO_CONTR</description>
    <externalDeveloperName>X_CONTO_CONTR</externalDeveloperName>
    <label>Contro Contrattuale</label>
    <length>30</length>
    <type>Text</type>
</CustomField>