force-app/main/default/objects/SiebelRds__x/fields/X_DATA_CHIUSURA_RDS__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_CHIUSURA_RDS__c</fullName>
    <description>X_DATA_CHIUSURA_RDS</description>
    <externalDeveloperName>X_DATA_CHIUSURA_RDS</externalDeveloperName>
    <label>Data Chiusura RDS</label>
    <type>DateTime</type>
</CustomField>