force-app/main/default/objects/SiebelRds__x/fields/X_DATA_EMISSIONE_FATTURA__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_EMISSIONE_FATTURA__c</fullName>
    <description>X_DATA_EMISSIONE_FATTURA</description>
    <externalDeveloperName>X_DATA_EMISSIONE_FATTURA</externalDeveloperName>
    <label>Data Emissione Fattura</label>
    <type>DateTime</type>
</CustomField>