force-app/main/default/objects/SiebelRds__x/fields/X_DATA_LETT_11__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_LETT_11__c</fullName>
    <description>X_DATA_LETT_11</description>
    <externalDeveloperName>X_DATA_LETT_11</externalDeveloperName>
    <label>Data lettura 11</label>
    <type>DateTime</type>
</CustomField>