force-app/main/default/objects/SiebelRds__x/fields/X_DATA_LETT_9__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_LETT_9__c</fullName>
    <description>X_DATA_LETT_9</description>
    <externalDeveloperName>X_DATA_LETT_9</externalDeveloperName>
    <label>Data lettura 9</label>
    <type>DateTime</type>
</CustomField>