force-app/main/default/objects/SiebelRds__x/fields/X_DATA_LIST__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_LIST__c</fullName>
    <description>X_DATA_LIST</description>
    <externalDeveloperName>X_DATA_LIST</externalDeveloperName>
    <label>Elenco dati</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>