force-app/main/default/objects/SiebelRds__x/fields/X_DATE_COMP__c.field-meta.xml
<CustomField>
    <fullName>X_DATE_COMP__c</fullName>
    <description>X_DATE_COMP</description>
    <externalDeveloperName>X_DATE_COMP</externalDeveloperName>
    <label>Data competenza</label>
    <type>DateTime</type>
</CustomField>