force-app/main/default/objects/SiebelRds__x/fields/X_DELEGATO__c.field-meta.xml
<CustomField>
    <fullName>X_DELEGATO__c</fullName>
    <description>X_DELEGATO</description>
    <externalDeveloperName>X_DELEGATO</externalDeveloperName>
    <label>Delegato</label>
    <length>50</length>
    <type>Text</type>
</CustomField>