force-app/main/default/objects/SiebelRds__x/fields/X_DISTRIBUTORE__c.field-meta.xml
<CustomField>
    <fullName>X_DISTRIBUTORE__c</fullName>
    <description>X_DISTRIBUTORE</description>
    <externalDeveloperName>X_DISTRIBUTORE</externalDeveloperName>
    <label>Distributore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>