force-app/main/default/objects/SiebelRds__x/fields/X_DT_CESSAZIONE__c.field-meta.xml
<CustomField>
    <fullName>X_DT_CESSAZIONE__c</fullName>
    <description>X_DT_CESSAZIONE</description>
    <externalDeveloperName>X_DT_CESSAZIONE</externalDeveloperName>
    <label>Data Cessazione</label>
    <type>DateTime</type>
</CustomField>