force-app/main/default/objects/SiebelRds__x/fields/X_DT_INVIO_JCAPS__c.field-meta.xml
<CustomField>
    <fullName>X_DT_INVIO_JCAPS__c</fullName>
    <description>X_DT_INVIO_JCAPS</description>
    <externalDeveloperName>X_DT_INVIO_JCAPS</externalDeveloperName>
    <label>Data invio JCAPS</label>
    <type>DateTime</type>
</CustomField>