force-app/main/default/objects/SiebelRds__x/fields/X_EMAIL_BENEF__c.field-meta.xml
<CustomField>
    <fullName>X_EMAIL_BENEF__c</fullName>
    <description>X_EMAIL_BENEF</description>
    <externalDeveloperName>X_EMAIL_BENEF</externalDeveloperName>
    <label>E-mail beneficiario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>