force-app/main/default/objects/SiebelRds__x/fields/X_ENABLE_ORDER__c.field-meta.xml
<CustomField>
    <fullName>X_ENABLE_ORDER__c</fullName>
    <description>X_ENABLE_ORDER</description>
    <externalDeveloperName>X_ENABLE_ORDER</externalDeveloperName>
    <label>Order Abilitato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>