force-app/main/default/objects/SiebelRds__x/fields/X_ESTRATTO_VAS_SIE34__c.field-meta.xml
<CustomField>
    <fullName>X_ESTRATTO_VAS_SIE34__c</fullName>
    <description>X_ESTRATTO_VAS_SIE34</description>
    <externalDeveloperName>X_ESTRATTO_VAS_SIE34</externalDeveloperName>
    <label>Estratto VAS SIE34</label>
    <length>1</length>
    <type>Text</type>
</CustomField>