force-app/main/default/objects/SiebelRds__x/fields/X_FASCIA_LETT_7__c.field-meta.xml
<CustomField>
    <fullName>X_FASCIA_LETT_7__c</fullName>
    <description>X_FASCIA_LETT_7</description>
    <externalDeveloperName>X_FASCIA_LETT_7</externalDeveloperName>
    <label>Fascia Lettura 7</label>
    <length>2</length>
    <type>Text</type>
</CustomField>