force-app/main/default/objects/SiebelRds__x/fields/X_FLAG_COM_DL__c.field-meta.xml
<CustomField>
    <fullName>X_FLAG_COM_DL__c</fullName>
    <description>X_FLAG_COM_DL</description>
    <externalDeveloperName>X_FLAG_COM_DL</externalDeveloperName>
    <label>Comunicazione distributore</label>
    <length>1</length>
    <type>Text</type>
</CustomField>