force-app/main/default/objects/SiebelRds__x/fields/X_FLAG_INVIA_MA3__c.field-meta.xml
<CustomField>
    <fullName>X_FLAG_INVIA_MA3__c</fullName>
    <description>X_FLAG_INVIA_MA3</description>
    <externalDeveloperName>X_FLAG_INVIA_MA3</externalDeveloperName>
    <label>Invia MA3</label>
    <length>1</length>
    <type>Text</type>
</CustomField>