force-app/main/default/objects/SiebelRds__x/fields/X_FLG_ADEMP_CSV__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_ADEMP_CSV__c</fullName>
    <description>X_FLG_ADEMP_CSV</description>
    <externalDeveloperName>X_FLG_ADEMP_CSV</externalDeveloperName>
    <label>Adempimento CSV</label>
    <length>1</length>
    <type>Text</type>
</CustomField>