force-app/main/default/objects/SiebelRds__x/fields/X_FLG_ADEMPIMENTO__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_ADEMPIMENTO__c</fullName>
    <description>X_FLG_ADEMPIMENTO</description>
    <externalDeveloperName>X_FLG_ADEMPIMENTO</externalDeveloperName>
    <label>Adempimento</label>
    <length>1</length>
    <type>Text</type>
</CustomField>