force-app/main/default/objects/SiebelRds__x/fields/X_FLG_KO_DEF_MASS__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_KO_DEF_MASS__c</fullName>
    <description>X_FLG_KO_DEF_MASS</description>
    <externalDeveloperName>X_FLG_KO_DEF_MASS</externalDeveloperName>
    <label>KO def mass</label>
    <length>1</length>
    <type>Text</type>
</CustomField>