force-app/main/default/objects/SiebelRds__x/fields/X_GRUPPO_INTERVENTO_TCP__c.field-meta.xml
<CustomField>
    <fullName>X_GRUPPO_INTERVENTO_TCP__c</fullName>
    <description>X_GRUPPO_INTERVENTO_TCP</description>
    <externalDeveloperName>X_GRUPPO_INTERVENTO_TCP</externalDeveloperName>
    <label>Gruppo Intervento TCP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>