force-app/main/default/objects/SiebelRds__x/fields/X_HER_DATA_CONSENSO_PEC_ATTUAL__c.field-meta.xml
<CustomField>
    <fullName>X_HER_DATA_CONSENSO_PEC_ATTUAL__c</fullName>
    <description>X_HER_DATA_CONSENSO_PEC_ATTUAL</description>
    <externalDeveloperName>X_HER_DATA_CONSENSO_PEC_ATTUAL</externalDeveloperName>
    <label>Attuale data consenso PEC</label>
    <type>DateTime</type>
</CustomField>