force-app/main/default/objects/SiebelRds__x/fields/X_HER_EMAIL_PEC__c.field-meta.xml
<CustomField>
    <fullName>X_HER_EMAIL_PEC__c</fullName>
    <description>X_HER_EMAIL_PEC</description>
    <externalDeveloperName>X_HER_EMAIL_PEC</externalDeveloperName>
    <label>E-mail PEC 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>