force-app/main/default/objects/SiebelRds__x/fields/X_ID_CAMPAGNA__c.field-meta.xml
<CustomField>
    <fullName>X_ID_CAMPAGNA__c</fullName>
    <description>X_ID_CAMPAGNA</description>
    <externalDeveloperName>X_ID_CAMPAGNA</externalDeveloperName>
    <label>ID Campagna</label>
    <length>15</length>
    <type>Text</type>
</CustomField>