force-app/main/default/objects/SiebelRds__x/fields/X_ID_INDIR_BENEF__c.field-meta.xml
<CustomField>
    <fullName>X_ID_INDIR_BENEF__c</fullName>
    <description>X_ID_INDIR_BENEF</description>
    <externalDeveloperName>X_ID_INDIR_BENEF</externalDeveloperName>
    <label>ID indirizzo beneficiario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>