force-app/main/default/objects/SiebelRds__x/fields/X_ID_QAD__c.field-meta.xml
<CustomField>
    <fullName>X_ID_QAD__c</fullName>
    <description>X_ID_QAD</description>
    <externalDeveloperName>X_ID_QAD</externalDeveloperName>
    <label>ID QAD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>