force-app/main/default/objects/SiebelRds__x/fields/X_IMPORTO_DOCUMENTO__c.field-meta.xml
<CustomField>
    <fullName>X_IMPORTO_DOCUMENTO__c</fullName>
    <description>X_IMPORTO_DOCUMENTO</description>
    <externalDeveloperName>X_IMPORTO_DOCUMENTO</externalDeveloperName>
    <label>Importo documento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>