force-app/main/default/objects/SiebelRds__x/fields/X_INDIRIZZO_BENEF__c.field-meta.xml
<CustomField>
    <fullName>X_INDIRIZZO_BENEF__c</fullName>
    <description>X_INDIRIZZO_BENEF</description>
    <externalDeveloperName>X_INDIRIZZO_BENEF</externalDeveloperName>
    <label>Indirizzo Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>