force-app/main/default/objects/SiebelRds__x/fields/X_LETT_REC_F2_A__c.field-meta.xml
<CustomField>
    <fullName>X_LETT_REC_F2_A__c</fullName>
    <description>X_LETT_REC_F2_A</description>
    <externalDeveloperName>X_LETT_REC_F2_A</externalDeveloperName>
    <label>Lettura Contestata F2 - Attiva</label>
    <length>32</length>
    <type>Text</type>
</CustomField>