force-app/main/default/objects/SiebelRds__x/fields/X_LETT_REC_F2_R__c.field-meta.xml
<CustomField>
    <fullName>X_LETT_REC_F2_R__c</fullName>
    <description>X_LETT_REC_F2_R</description>
    <externalDeveloperName>X_LETT_REC_F2_R</externalDeveloperName>
    <label>Lettura Contestata F2 - Reattiva</label>
    <length>32</length>
    <type>Text</type>
</CustomField>