force-app/main/default/objects/SiebelRds__x/fields/X_LETT_REC_F3_P__c.field-meta.xml
<CustomField>
    <fullName>X_LETT_REC_F3_P__c</fullName>
    <description>X_LETT_REC_F3_P</description>
    <externalDeveloperName>X_LETT_REC_F3_P</externalDeveloperName>
    <label>Lettura Contestata F3 - Potenza</label>
    <length>32</length>
    <type>Text</type>
</CustomField>