force-app/main/default/objects/SiebelRds__x/fields/X_LETTURA_2__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_2__c</fullName>
    <description>X_LETTURA_2</description>
    <externalDeveloperName>X_LETTURA_2</externalDeveloperName>
    <label>Lettura 2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>