force-app/main/default/objects/SiebelRds__x/fields/X_LETTURA_3__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_3__c</fullName>
    <description>X_LETTURA_3</description>
    <externalDeveloperName>X_LETTURA_3</externalDeveloperName>
    <label>Lettura 3</label>
    <length>32</length>
    <type>Text</type>
</CustomField>