force-app/main/default/objects/SiebelRds__x/fields/X_LETTURA_4__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_4__c</fullName>
    <description>X_LETTURA_4</description>
    <externalDeveloperName>X_LETTURA_4</externalDeveloperName>
    <label>Lettura 4</label>
    <length>32</length>
    <type>Text</type>
</CustomField>