force-app/main/default/objects/SiebelRds__x/fields/X_LETTURA_CLI_10__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_CLI_10__c</fullName>
    <description>X_LETTURA_CLI_10</description>
    <externalDeveloperName>X_LETTURA_CLI_10</externalDeveloperName>
    <label>Lettura CLI 10</label>
    <length>32</length>
    <type>Text</type>
</CustomField>