force-app/main/default/objects/SiebelRds__x/fields/X_LETTURA_CLI_11__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_CLI_11__c</fullName>
    <description>X_LETTURA_CLI_11</description>
    <externalDeveloperName>X_LETTURA_CLI_11</externalDeveloperName>
    <label>Lettura CLI 11</label>
    <length>32</length>
    <type>Text</type>
</CustomField>