force-app/main/default/objects/SiebelRds__x/fields/X_LETTURA_CLI_12__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_CLI_12__c</fullName>
    <description>X_LETTURA_CLI_12</description>
    <externalDeveloperName>X_LETTURA_CLI_12</externalDeveloperName>
    <label>Lettura CLI 12</label>
    <length>32</length>
    <type>Text</type>
</CustomField>