force-app/main/default/objects/SiebelRds__x/fields/X_MAIL_PEC_FE__c.field-meta.xml
<CustomField>
    <fullName>X_MAIL_PEC_FE__c</fullName>
    <description>X_MAIL_PEC_FE</description>
    <externalDeveloperName>X_MAIL_PEC_FE</externalDeveloperName>
    <label>X_MAIL_PEC_FE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>