force-app/main/default/objects/SiebelRds__x/fields/X_MAT_MISURATORE__c.field-meta.xml
<CustomField>
    <fullName>X_MAT_MISURATORE__c</fullName>
    <description>X_MAT_MISURATORE</description>
    <externalDeveloperName>X_MAT_MISURATORE</externalDeveloperName>
    <label>Matricola misuratore</label>
    <length>30</length>
    <type>Text</type>
</CustomField>