force-app/main/default/objects/SiebelRds__x/fields/X_MATERIALE2__c.field-meta.xml
<CustomField>
    <fullName>X_MATERIALE2__c</fullName>
    <description>X_MATERIALE2</description>
    <externalDeveloperName>X_MATERIALE2</externalDeveloperName>
    <label>Materiale 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>