force-app/main/default/objects/SiebelRds__x/fields/X_MATERIALE4__c.field-meta.xml
<CustomField>
    <fullName>X_MATERIALE4__c</fullName>
    <description>X_MATERIALE4</description>
    <externalDeveloperName>X_MATERIALE4</externalDeveloperName>
    <label>Materiale 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>