force-app/main/default/objects/SiebelRds__x/fields/X_MATERIALE7__c.field-meta.xml
<CustomField>
    <fullName>X_MATERIALE7__c</fullName>
    <description>X_MATERIALE7</description>
    <externalDeveloperName>X_MATERIALE7</externalDeveloperName>
    <label>Materiale 7</label>
    <length>30</length>
    <type>Text</type>
</CustomField>